--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
 
       <div class="menu-btn" onclick="openMenu()">
-        <div class="menu-btn__burger" id="menu"></div>
+        <div class="menu-btn__burger" id="menu" onclick="openMenu()"></div>
       </div>
 
       <div id="top-slider">hello
